Feat: Added day three

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,16 @@ add_executable(
         untitled main.cpp
         Days/Day.h
         Days/Day.cpp
-        Days/DayOne/DayOnePartOne.cpp
-        Days/DayOne/DayOnePartOne.h
-        Days/DayOne/DayOnePartTwo.cpp
-        Days/DayOne/DayOnePartTwo.h
-        Days/DayTwo/DayTwoPartOne.cpp
-        Days/DayTwo/DayTwoPartOne.hpp
-        Days/DayTwo/DayTwoPartTwo.cpp
-        Days/DayTwo/DayTwoPartTwo.hpp
+        Days/Day1/DayOnePartOne.cpp
+        Days/Day1/DayOnePartOne.h
+        Days/Day1/DayOnePartTwo.cpp
+        Days/Day1/DayOnePartTwo.h
+        Days/Day2/DayTwoPartOne.cpp
+        Days/Day2/DayTwoPartOne.hpp
+        Days/Day2/DayTwoPartTwo.cpp
+        Days/Day2/DayTwoPartTwo.hpp
+        Days/Day3/DayThreePartOne.cpp
+        Days/Day3/DayThreePartOne.hpp
+        Days/Day3/DayThreePartTwo.cpp
+        Days/Day3/DayThreePartTwo.hpp
 )
