Feat: Added CMake and compiler_depend.make

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,80 @@ add_executable(
         Days/Day6/DaySixPartOne.hpp
         Days/Day6/DaySixPartTwo.cpp
         Days/Day6/DaySixPartTwo.hpp
+        Days/Day7/DaySevenPartOne.cpp
+        Days/Day7/DaySevenPartOne.hpp
+        Days/Day7/DaySevenPartTwo.cpp
+        Days/Day7/DaySevenPartTwo.hpp
+        Days/Day8/DayEightPartOne.cpp
+        Days/Day8/DayEightPartOne.hpp
+        Days/Day8/DayEightPartTwo.cpp
+        Days/Day8/DayEightPartTwo.hpp
+        Days/Day9/DayNinePartOne.cpp
+        Days/Day9/DayNinePartOne.hpp
+        Days/Day9/DayNinePartTwo.cpp
+        Days/Day9/DayNinePartTwo.hpp
+        Days/Day10/DayTenPartOne.cpp
+        Days/Day10/DayTenPartOne.hpp
+        Days/Day10/DayTenPartTwo.cpp
+        Days/Day10/DayTenPartTwo.hpp
+        Days/Day11/DayElevenPartOne.cpp
+        Days/Day11/DayElevenPartOne.hpp
+        Days/Day11/DayElevenPartTwo.cpp
+        Days/Day11/DayElevenPartTwo.hpp
+        Days/Day12/DayTwelvePartOne.cpp
+        Days/Day12/DayTwelvePartOne.hpp
+        Days/Day12/DayTwelvePartTwo.cpp
+        Days/Day12/DayTwelvePartTwo.hpp
+        Days/Day13/DayThirteenPartOne.cpp
+        Days/Day13/DayThirteenPartOne.hpp
+        Days/Day13/DayThirteenPartTwo.cpp
+        Days/Day13/DayThirteenPartTwo.hpp
+        Days/Day14/DayFourteenPartOne.cpp
+        Days/Day14/DayFourteenPartOne.hpp
+        Days/Day14/DayFourteenPartTwo.cpp
+        Days/Day14/DayFourteenPartTwo.hpp
+        Days/Day15/DayFifteenPartOne.cpp
+        Days/Day15/DayFifteenPartOne.hpp
+        Days/Day15/DayFifteenPartTwo.cpp
+        Days/Day15/DayFifteenPartTwo.hpp
+        Days/Day16/DaySixteenPartOne.cpp
+        Days/Day16/DaySixteenPartOne.hpp
+        Days/Day16/DaySixteenPartTwo.cpp
+        Days/Day16/DaySixteenPartTwo.hpp
+        Days/Day17/DaySeventeenPartOne.cpp
+        Days/Day17/DaySeventeenPartOne.hpp
+        Days/Day17/DaySeventeenPartTwo.cpp
+        Days/Day17/DaySeventeenPartTwo.hpp
+        Days/Day18/DayEighteenPartOne.cpp
+        Days/Day18/DayEighteenPartOne.hpp
+        Days/Day18/DayEighteenPartTwo.cpp
+        Days/Day18/DayEighteenPartTwo.hpp
+        Days/Day19/DayNineteenPartOne.cpp
+        Days/Day19/DayNineteenPartOne.hpp
+        Days/Day19/DayNineteenPartTwo.cpp
+        Days/Day19/DayNineteenPartTwo.hpp
+        Days/Day20/DayTwentyPartOne.cpp
+        Days/Day20/DayTwentyPartOne.hpp
+        Days/Day20/DayTwentyPartTwo.cpp
+        Days/Day20/DayTwentyPartTwo.hpp
+        Days/Day21/DayTwentyOnePartOne.cpp
+        Days/Day21/DayTwentyOnePartOne.hpp
+        Days/Day21/DayTwentyOnePartTwo.cpp
+        Days/Day21/DayTwentyOnePartTwo.hpp
+        Days/Day22/DayTwentyTwoPartOne.cpp
+        Days/Day22/DayTwentyTwoPartOne.hpp
+        Days/Day22/DayTwentyTwoPartTwo.cpp
+        Days/Day22/DayTwentyTwoPartTwo.hpp
+        Days/Day23/DayTwentyThreePartOne.cpp
+        Days/Day23/DayTwentyThreePartOne.hpp
+        Days/Day23/DayTwentyThreePartTwo.cpp
+        Days/Day23/DayTwentyThreePartTwo.hpp
+        Days/Day24/DayTwentyFourPartOne.cpp
+        Days/Day24/DayTwentyFourPartOne.hpp
+        Days/Day24/DayTwentyFourPartTwo.cpp
+        Days/Day24/DayTwentyFourPartTwo.hpp
+        Days/Day25/DayTwentyFivePartOne.cpp
+        Days/Day25/DayTwentyFivePartOne.hpp
+        Days/Day25/DayTwentyFivePartTwo.cpp
+        Days/Day25/DayTwentyFivePartTwo.hpp
 )
