Feat: Day six part one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,3 +108,5 @@ add_executable(
         Days/Day25/DayTwentyFivePartTwo.cpp
         Days/Day25/DayTwentyFivePartTwo.hpp
 )
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
